--- a/book/schedule.yaml
+++ b/book/schedule.yaml
@@ -101,7 +101,7 @@ tabs:
     - time: 9:00 - 9:45
       title: Signals of Opportunity
       leads:
-      - Xiaolan Xiu
+      - Xiaolan Xu
       - Rashmi Shaw
       - Simon Yueh
     - time: 9:45 - 10:00
